@@ -8,7 +8,7 @@ FIREFOX_VERSION=38.2.0esr
 
 TORBROWSER_UPDATE_CHANNEL=release
 
-TORBROWSER_TAG=tor-browser-${FIREFOX_VERSION}-5.0-1-build2
+TORBROWSER_TAG=tor-browser-${FIREFOX_VERSION}-5.0-1-build3
 TOR_TAG=tor-0.2.6.10
 TORLAUNCHER_TAG=0.2.7.7
 TORBUTTON_TAG=1.9.3.2
