@@ -10,14 +10,15 @@ build_targets:
     osx64: Darwin_x86_64-gcc3
 channels:
     alpha: 5.5a1
-    release: 5.0
+    release: 5.0.1
 versions:
-    5.0:
+    5.0.1:
         platformVersion: 38.2.0
         detailsURL: https://www.torproject.org/projects/torbrowser.html.en
-        download_url: https://www.torproject.org/dist/torbrowser/5.0
+        download_url: https://www.torproject.org/dist/torbrowser/5.0.1
         incremental_from:
           - 4.5.3
+          - 5.0
         migrate_archs:
           osx32: osx64
         osx32:
